# example-queries-cosmwasm-verify

./: .gitignore  Cargo.toml  README.md
scripts/: build.sh  deploy_to_tilt.js  package-lock.json  query.js
src/: contract.rs  error.rs  msg.rs  state.rs
tests/: integration.rs
